Player on mobile fixes

--- a/src/components/PageHeader/PageHeader.css
+++ b/src/components/PageHeader/PageHeader.css
@@ -3,7 +3,7 @@
   text-transform: uppercase;
   position: sticky;
   top: 0;
-  z-index: 10;
+  z-index: 100;
   box-shadow: 0 0 4px #000;
     a {
       display: block;
